# rust_rpc

./: .gitignore  Cargo.toml  LICENSE  README.md  custom_animation.json
src/: animations.rs  main.rs
src/animations/: dead_inside.rs  json_custom.rs  loading.rs  mod.rs  started_connection.rs
src/features/: autorun.rs  mod.rs  utils.rs
src/models/: animation.rs  client.rs  context.rs  json_animation.rs  message.rs  mod.rs
