[package]
name = "rust_rpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
discord-rich-presence = "0.2.3"
dotenv = "0.15.0"
winreg = "0.52.0"
simple_logger = "4.3.3"
log = "0.4.21"
ringbuffer = "0.15.0"