[package]
name = "rust_rpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[target.x86_64-unknown-linux-musl]
linker = "rust-lld"

[dependencies]
dotenv = "0.15.0"
#TODO winreg = "0.52.0"
log = "0.4.21"
ringbuffer = "0.15.0"
tray-icon = "0.13.1"
image = "0.25.0"
tao = "0.27.0"
tokio = { version = "1.36", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["full"] }
discord-sdk = "0.3.6"
anyhow = "1.0.81"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
once_cell = "1.19.0"
serde_json = "1.0.115"
serde = { version = "1.0.197", features = ["derive"] }
rand = "0.9.0-alpha.1"
auto-launch = "0.5.0"
cfg-if = "1.0.0"

